refactor fedora webapp and install resource filtering for bundled tomcat 7 builds

--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -21,7 +21,7 @@
       </resource>
       <resource>
         <directory>${project.build.directory}/maven-shared-archive-resources/webapp-context</directory>
-        <filtering>true</filtering>
+        <filtering>false</filtering>
       </resource>
     </resources>
 
