FCREPO-1220 update bundled Postgres driver

--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -295,9 +295,9 @@
     </dependency>
 
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.1-902.jdbc4</version>
+      <version>9.3-1102-jdbc41</version>
       <scope>runtime</scope>
     </dependency>
 
