--- a/fcrepo-server/src/main/resources/properties/resources/install.properties
+++ b/fcrepo-server/src/main/resources/properties/resources/install.properties
@@ -9,10 +9,10 @@ install.tomcat.basename         = apache-tomcat-7.0.55
 install.jdbc.mysql              = mysql-connector-java-5.1.21.jar
 install.jdbc.derby              = derby-10.9.1.0.jar
 install.jdbc.derbynetworkclient = derbyclient-10.9.1.0.jar
-install.jdbc.postgresql         = postgresql-9.1-902.jdbc4.jar
+install.jdbc.postgresql         = postgresql-9.3-1102-jdbc41.jar
 
 # used by the org.fcrepo.utilities.install.Installer to determine if these jars
 # should be removed from fedora.war
 install.commons.collections     = commons-collections-3.2.1.jar
-install.commons.dbcp            = commons-dbcp-1.2.2.jar
-install.commons.pool            = commons-pool-1.3.jar
+install.commons.dbcp            = commons-dbcp-1.4.jar
+install.commons.pool            = commons-pool-1.6.jar
