--- a/fcrepo-security/fcrepo-security-http/pom.xml
+++ b/fcrepo-security/fcrepo-security-http/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>fcrepo-security</artifactId>
 		<groupId>org.fcrepo</groupId>
-		<version>3.8.0-SNAPSHOT</version>
+		<version>3.8.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
