--- a/fcrepo-shared-resources/pom.xml
+++ b/fcrepo-shared-resources/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.8.1</version>
+    <version>3.8.2-SNAPSHOT</version>
   </parent>
   <groupId>org.fcrepo</groupId>
   <artifactId>fcrepo-shared-resources</artifactId>
